# c-modulemd

./: .editorconfig
modulemd/: meson.build  modulemd-module.c  modulemd-module.h
